--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "@aivec/react-material-components",
   "version": "1.0.0",
   "description": "React material-ui components for streamlined UI development",
-  "main": "index.js",
+  "main": "dist/index.js",
   "peerDependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1"
+    "react": "^16.9.0"
   },
   "scripts": {
     "start": "webpack --watch",
