--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
   "peerDependencies": {
-    "react": "^16.9.0"
+    "react": "^16.9.0",
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1"
   },
   "scripts": {
     "start": "webpack --watch",
@@ -35,7 +37,7 @@
     "clsx": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.10.2",
     "styled-components": "^4.3.2",
     "webpack": "^4.39.3"
   },
