--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
   "peerDependencies": {
     "react": "^16.9.0",
     "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1"
+    "@material-ui/icons": "^4.4.1",
+    "styled-components": ">= 4"
   },
   "scripts": {
     "start": "webpack --watch",
@@ -37,8 +38,6 @@
     "clsx": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.10.2",
-    "styled-components": "^4.3.2",
     "webpack": "^4.39.3"
   },
   "devDependencies": {
@@ -62,6 +61,7 @@
     "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.2.0",
     "prettier": "^1.18.2",
+    "styled-components": "^4.4.0",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-styled-components": "^0.1.1",
