--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "peerDependencies": {
     "react": "^16.9.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
-    "styled-components": ">= 4"
+    "styled-components": ">= 5"
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
+    "format": "prettier -c src/**/*.tsx",
+    "format:fix": "prettier --write src/**/*.tsx",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build": "export NODE_ENV=production && webpack"
   },
   "repository": {
     "type": "git",
@@ -21,51 +27,101 @@
   "author": "Evan D Shaw <evandanielshaw@gmail.com> (https://github.com/EvanShaw)",
   "license": "GPL-2.0-only",
   "keywords": [
-    "welcart",
+    "Welcart",
     "settlement module",
-    "aivec",
+    "Aivec",
     "LINE Pay",
     "Stripe",
-    "Amazon Pay"
+    "Amazon Pay",
+    "WordPress"
   ],
   "bugs": {
     "url": "https://github.com/aivec/react-material-components/issues"
   },
   "homepage": "https://github.com/aivec/react-material-components#readme",
   "dependencies": {
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1",
-    "clsx": "^1.0.4",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@types/react": "^16.9.23",
+    "@types/styled-components": "^5.0.1",
+    "clsx": "^1.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "styled-components": "^4.4.0",
-    "webpack": "^4.39.3"
+    "react": "^16.13.0",
+    "styled-components": "^5.0.1",
+    "webpack": "^4.42.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.6",
-    "babel-polyfill": "^6.26.0",
-    "eslint": "~5.16.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^4.2.0",
-    "prettier": "^1.18.2",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-tsdoc": "^0.2.3",
+    "file-loader": "^4.3.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.0",
+    "prettier": "^1.19.1",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.8.0",
-    "webpack-cli": "^3.3.7"
+    "stylelint-processor-styled-components": "^1.10.0",
+    "typescript": "^3.8.3",
+    "webpack-cli": "^3.3.11"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
+  "eslintConfig": {
+    "plugins": [
+      "eslint-plugin-tsdoc",
+      "prettier"
+    ],
+    "extends": [
+      "airbnb-typescript",
+      "airbnb/hooks",
+      "plugin:@typescript-eslint/eslint-recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended-requiring-type-checking",
+      "plugin:prettier/recommended"
+    ],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "rules": {
+      "react/state-in-constructor": [
+        1,
+        "never"
+      ],
+      "react/jsx-wrap-multilines": [
+        "error",
+        {
+          "declaration": false,
+          "assignment": false
+        }
+      ],
+      "tsdoc/syntax": "warn",
+      "prettier/prettier": "error"
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
+    }
   }
 }
