--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -41,45 +41,44 @@
   },
   "homepage": "https://github.com/aivec/react-material-components#readme",
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
-    "@types/react": "^16.9.23",
-    "@types/styled-components": "^5.0.1",
-    "clsx": "^1.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "styled-components": "^5.0.1",
-    "webpack": "^4.42.0"
+    "clsx": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.7",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@types/react": "^16.9.53",
+    "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^7.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "eslint-plugin-tsdoc": "^0.2.3",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-tsdoc": "^0.2.7",
     "file-loader": "^4.3.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.6",
     "prettier": "^1.19.1",
+    "react": "^16.14.0",
+    "styled-components": "^5.2.0",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^3.8.3",
-    "webpack-cli": "^3.3.11"
+    "typescript": "^3.9.7",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^3.3.12"
   },
   "stylelint": {
     "processors": [
