--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -71,6 +71,7 @@
     "fork-ts-checker-webpack-plugin": "^4.1.6",
     "prettier": "^1.19.1",
     "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "styled-components": "^5.2.0",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^2.2.0",
@@ -78,7 +79,7 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^3.9.7",
     "webpack": "^5.1.3",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.0.0"
   },
   "stylelint": {
     "processors": [
