--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "peerDependencies": {
-    "react": "^16.9.0",
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1",
-    "styled-components": ">= 5"
+    "react": ">= 16.9.0",
+    "react-dom": ">= 16.8.0",
+    "@material-ui/core": ">= 4.4.2",
+    "@material-ui/icons": ">= 4.4.1",
+    "styled-components": ">= 5",
+    "clsx": ">= 1.1.1"
   },
   "scripts": {
     "type-check": "tsc --noEmit",
@@ -19,6 +21,7 @@
     "format": "prettier -c src/**/*.tsx",
     "format:fix": "prettier --write src/**/*.tsx",
     "build:types": "tsc --emitDeclarationOnly",
+    "build:dev": "export NODE_ENV=development && webpack",
     "build": "export NODE_ENV=production && webpack"
   },
   "repository": {
@@ -40,9 +43,6 @@
     "url": "https://github.com/aivec/react-material-components/issues"
   },
   "homepage": "https://github.com/aivec/react-material-components#readme",
-  "dependencies": {
-    "clsx": "^1.1.1"
-  },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
@@ -56,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "clsx": "^1.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-config-prettier": "^6.13.0",
@@ -79,7 +80,7 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^3.9.7",
     "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.1.0"
   },
   "stylelint": {
     "processors": [
@@ -133,5 +134,6 @@
         "typescript": {}
       }
     }
-  }
+  },
+  "dependencies": {}
 }
