feat: rewrite module tree structure for more intuitive imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
-    "declarationDir": "dist/types",
+    "declarationDir": "dist",
     "declaration": true,
     "target": "es6",
-    "module": "es6",
+    "module": "esnext",
     "jsx": "react",
     "strict": true,
     "baseUrl": ".",
