--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "2.0.1",
+  "version": "3.0.0-beta",
   "description": "React material-ui components for streamlined UI development",
   "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
+  "private": true,
   "peerDependencies": {
     "@material-ui/core": ">= 4.4.2",
     "@material-ui/icons": ">= 4.4.1",
@@ -20,9 +21,12 @@
     "stylelint": "stylelint './src/**/*.tsx'",
     "format": "prettier -c src/**/*.tsx",
     "format:fix": "prettier --write src/**/*.tsx",
-    "build:types": "rm -rf dist/types && tsc --emitDeclarationOnly",
+    "build:types": "tsc --emitDeclarationOnly",
     "build:dev": "export NODE_ENV=development && webpack",
-    "build": "npm run build:types && export NODE_ENV=production && webpack"
+    "build": "npm run build:types && export NODE_ENV=production && webpack",
+    "prebuild": "rm -rf dist",
+    "postbuild": "cp ./package.json dist && sed -i '/\"private\": true/d' dist/package.json",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
