--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "3.0.0-beta",
+  "version": "3.0.0",
   "description": "React material-ui components for streamlined UI development",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "private": true,
   "peerDependencies": {
     "@material-ui/core": ">= 4.4.2",
@@ -26,7 +26,7 @@
     "build": "npm run build:types && export NODE_ENV=production && webpack",
     "prebuild": "rm -rf dist",
     "postbuild": "cp ./package.json dist && sed -i '/\"private\": true/d' dist/package.json",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
