--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "npm run build:types && export NODE_ENV=production && webpack",
     "prebuild": "rm -rf dist",
     "postbuild": "cp ./package.json dist && sed -i '/\"private\": true/d' dist/package.json",
-    "prepublishOnly": "npm run build"
+    "publish:dist": "npm run build && npm publish ./dist"
   },
   "repository": {
     "type": "git",
