--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@aivec/react-material-components",
-  "version": "3.0.3",
+  "version": "4.0.0",
   "description": "React material-ui components for streamlined UI development",
   "main": "index.js",
   "types": "index.d.ts",
   "private": true,
   "peerDependencies": {
-    "@material-ui/core": ">= 4.4.2",
-    "@material-ui/icons": ">= 4.4.1",
+    "@mui/icons-material": ">= 5.0.0",
+    "@mui/material": ">= 5.0.0",
     "clsx": ">= 1.1.1",
-    "react": ">= 16.9.0",
-    "react-dom": ">= 16.8.0",
+    "react": ">= 17.0.0",
+    "react-dom": ">= 17.0.0",
     "styled-components": ">= 5"
   },
   "scripts": {
@@ -53,8 +53,12 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
+    "@mui/system": "^5.0.1",
     "@types/react": "^16.9.53",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -75,16 +79,16 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^4.1.6",
     "prettier": "^1.19.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.2.0",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^3.9.7",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0"
+    "typescript": "^4.4.3",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0"
   },
   "stylelint": {
     "processors": [
